analise através do jupyter notebook

--- a/Wine_Quality_Study.ipynb
+++ b/Wine_Quality_Study.ipynb
@@ -5,15 +5,15 @@
    "metadata": {},
    "source": [
     "# Avaliando Conjunto de Dados Utilizando Python e Libs de Dada Análises\n",
-    "abaixo são explorados os arquivos `winequality-red.csv` e `winequality-white.csv` para responder as perguntas do tes abaixo.\n",
-    "Usando o Pandas, explore winequality-red.csv e winequality-white.csv no notebook Jupyter abaixo para responder às perguntas do quiz abaixo do notebook sobre as seguintes características do conjunto de dados:\n",
+    "abaixo são explorados os arquivos `winequality-red.csv` e `winequality-white.csv` para responder as perguntas abaixo.\n",
+    "Usando o Pandas, no notebook Jupyter podemos responder:\n",
     "\n",
-    "número de amostras em cada conjunto de dados\n",
-    "número de colunas em cada conjunto de dados\n",
-    "recursos com valores faltantes\n",
-    "linhas duplicadas no conjunto de dados sobre vinho branco\n",
-    "número de valores únicos para qualidade em cada conjunto de dados\n",
-    "densidade média do conjunto de dados sobre vinho tinto"
+    "1. número de amostras em cada conjunto de dados\n",
+    "2. número de colunas em cada conjunto de dados\n",
+    "3. recursos com valores faltantes\n",
+    "4. linhas duplicadas no conjunto de dados sobre vinho branco\n",
+    "5. número de valores únicos para qualidade em cada conjunto de dados\n",
+    "6. densidade média do conjunto de dados sobre vinho tinto"
    ]
   },
   {
