arquivo de vinhos editado

--- a/Data_Appending.ipynb
+++ b/Data_Appending.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -534,14 +534,14 @@
        "4      9.4        5   red  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# anexe dataframes\n",
-    "wine_df = red_df.append(white_df)\n",
+    "wine_df = red_df.append(white_df, ignore_index=True)\n",
     "\n",
     "# exiba o dataframe para ver se tudo deu certo\n",
     "wine_df.head()"
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
        "(6497, 13)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4893</th>\n",
+       "      <th>6492</th>\n",
        "      <td>6.2</td>\n",
        "      <td>0.21</td>\n",
        "      <td>0.29</td>\n",
@@ -626,7 +626,7 @@
        "      <td>white</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4894</th>\n",
+       "      <th>6493</th>\n",
        "      <td>6.6</td>\n",
        "      <td>0.32</td>\n",
        "      <td>0.36</td>\n",
@@ -642,7 +642,7 @@
        "      <td>white</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4895</th>\n",
+       "      <th>6494</th>\n",
        "      <td>6.5</td>\n",
        "      <td>0.24</td>\n",
        "      <td>0.19</td>\n",
@@ -658,7 +658,7 @@
        "      <td>white</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4896</th>\n",
+       "      <th>6495</th>\n",
        "      <td>5.5</td>\n",
        "      <td>0.29</td>\n",
        "      <td>0.30</td>\n",
@@ -674,7 +674,7 @@
        "      <td>white</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4897</th>\n",
+       "      <th>6496</th>\n",
        "      <td>6.0</td>\n",
        "      <td>0.21</td>\n",
        "      <td>0.38</td>\n",
@@ -695,28 +695,28 @@
       ],
       "text/plain": [
        "      fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
-       "4893            6.2              0.21         0.29             1.6      0.039   \n",
-       "4894            6.6              0.32         0.36             8.0      0.047   \n",
-       "4895            6.5              0.24         0.19             1.2      0.041   \n",
-       "4896            5.5              0.29         0.30             1.1      0.022   \n",
-       "4897            6.0              0.21         0.38             0.8      0.020   \n",
+       "6492            6.2              0.21         0.29             1.6      0.039   \n",
+       "6493            6.6              0.32         0.36             8.0      0.047   \n",
+       "6494            6.5              0.24         0.19             1.2      0.041   \n",
+       "6495            5.5              0.29         0.30             1.1      0.022   \n",
+       "6496            6.0              0.21         0.38             0.8      0.020   \n",
        "\n",
        "      free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \\\n",
-       "4893                 24.0                  92.0  0.99114  3.27       0.50   \n",
-       "4894                 57.0                 168.0  0.99490  3.15       0.46   \n",
-       "4895                 30.0                 111.0  0.99254  2.99       0.46   \n",
-       "4896                 20.0                 110.0  0.98869  3.34       0.38   \n",
-       "4897                 22.0                  98.0  0.98941  3.26       0.32   \n",
+       "6492                 24.0                  92.0  0.99114  3.27       0.50   \n",
+       "6493                 57.0                 168.0  0.99490  3.15       0.46   \n",
+       "6494                 30.0                 111.0  0.99254  2.99       0.46   \n",
+       "6495                 20.0                 110.0  0.98869  3.34       0.38   \n",
+       "6496                 22.0                  98.0  0.98941  3.26       0.32   \n",
        "\n",
        "      alcohol  quality  color  \n",
-       "4893     11.2        6  white  \n",
-       "4894      9.6        5  white  \n",
-       "4895      9.4        6  white  \n",
-       "4896     12.8        7  white  \n",
-       "4897     11.8        6  white  "
+       "6492     11.2        6  white  \n",
+       "6493      9.6        5  white  \n",
+       "6494      9.4        6  white  \n",
+       "6495     12.8        7  white  \n",
+       "6496     11.8        6  white  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
