--- a/GroupBy_Wine_Study.ipynb
+++ b/GroupBy_Wine_Study.ipynb
@@ -1511,6 +1511,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.72"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ph_desc = wine_df[\"pH\"].describe()\n",
+    "ph_desc['min']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
@@ -1845,6 +1866,207 @@
    "source": [
     "# Encontre a qualidade média de cada nível de acidez com groupby\n",
     "wine_df.groupby('acidity_levels').mean()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixed acidity</th>\n",
+       "      <th>volatile acidity</th>\n",
+       "      <th>citric acid</th>\n",
+       "      <th>residual sugar</th>\n",
+       "      <th>chlorides</th>\n",
+       "      <th>free sulfur dioxide</th>\n",
+       "      <th>total sulfur dioxide</th>\n",
+       "      <th>density</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>sulphates</th>\n",
+       "      <th>alcohol</th>\n",
+       "      <th>quality</th>\n",
+       "      <th>color</th>\n",
+       "      <th>acidity_levels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>8.1</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.368</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>0.9968</td>\n",
+       "      <td>3.11</td>\n",
+       "      <td>1.28</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>red</td>\n",
+       "      <td>Alto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>7.9</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>0.341</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>0.9969</td>\n",
+       "      <td>3.04</td>\n",
+       "      <td>1.08</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>red</td>\n",
+       "      <td>Alto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>10.2</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>0.070</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.9971</td>\n",
+       "      <td>3.04</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>red</td>\n",
+       "      <td>Alto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>8.6</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.110</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>0.9972</td>\n",
+       "      <td>2.93</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>9.9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>red</td>\n",
+       "      <td>Alto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>8.6</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.110</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>0.9972</td>\n",
+       "      <td>2.93</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>9.9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>red</td>\n",
+       "      <td>Alto</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
+       "17            8.1              0.56         0.28             1.7      0.368   \n",
+       "19            7.9              0.32         0.51             1.8      0.341   \n",
+       "56           10.2              0.42         0.57             3.4      0.070   \n",
+       "86            8.6              0.49         0.28             1.9      0.110   \n",
+       "91            8.6              0.49         0.28             1.9      0.110   \n",
+       "\n",
+       "    free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \\\n",
+       "17                 16.0                  56.0   0.9968  3.11       1.28   \n",
+       "19                 17.0                  56.0   0.9969  3.04       1.08   \n",
+       "56                  4.0                  10.0   0.9971  3.04       0.63   \n",
+       "86                 20.0                 136.0   0.9972  2.93       1.95   \n",
+       "91                 20.0                 136.0   0.9972  2.93       1.95   \n",
+       "\n",
+       "    alcohol  quality color acidity_levels  \n",
+       "17      9.3        5   red           Alto  \n",
+       "19      9.2        6   red           Alto  \n",
+       "56      9.6        5   red           Alto  \n",
+       "86      9.9        6   red           Alto  \n",
+       "91      9.9        6   red           Alto  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# selecionando registros que tem níveis altos de acidez através de query no pandas\n",
+    "#wine_df_alto = wine_df[wine_df['acidity_levels'] == 'Alto']\n",
+    "wine_df_alto = wine_df.query(\"acidity_levels == 'Alto'\")\n",
+    "wine_df_alto.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rafae\\Anaconda3\\lib\\site-packages\\pandas\\core\\ops.py:1167: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  result = method(y)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "invalid type comparison",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-48-11bc97a0944b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# outro exemplo\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mwine_df_quality\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwine_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mwine_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'quality'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m' >5'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;31m#wine_df_quality = wine_df.query('quality ==\"> int(3\"')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mwine_df_quality\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\ops.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(self, other, axis)\u001b[0m\n\u001b[0;32m   1281\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1282\u001b[0m             \u001b[1;32mwith\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merrstate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'ignore'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1283\u001b[1;33m                 \u001b[0mres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mna_op\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mother\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1284\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1285\u001b[0m                 raise TypeError('Could not compare {typ} type with Series'\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\ops.py\u001b[0m in \u001b[0;36mna_op\u001b[1;34m(x, y)\u001b[0m\n\u001b[0;32m   1167\u001b[0m                     \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmethod\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1168\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mresult\u001b[0m \u001b[1;32mis\u001b[0m \u001b[0mNotImplemented\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1169\u001b[1;33m                     \u001b[1;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"invalid type comparison\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1170\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1171\u001b[0m                 \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: invalid type comparison"
+     ]
+    }
+   ],
+   "source": [
+    "# outro exemplo\n",
+    "wine_df_quality = wine_df[wine_df['quality'] == ' >5']\n",
+    "#wine_df_quality = wine_df.query('quality ==\"> int(3\"')\n",
+    "wine_df_quality.head()"
    ]
   },
   {
